<resources>
    <string name="app_name">Jalan Yuk</string>
    <string name="login">Masuk</string>
    <string name="loguot">Keluar</string>
    <string name="login_form">Masuk</string>
    <string name="username_login">Username</string>
    <string name="password_login">Password</string>
    <string name="sign_in_bt_login">Masuk</string>
    <string name="register_sign">Buat Akun</string>
    <string name="sign_up_login">Daftar</string>
    <string name="namalengkap_register">Nama</string>
    <string name="username_register">Username</string>
    <string name="password_register">Password</string>
    <string name="confirm_password_register">Confirm Password</string>
    <string name="sign_up_bt__register">Daftar</string>
    <string name="login_sign">Sudah Punya Akun</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="akun">Setting Akun</string>
    <string name="keluar">Keluar</string>
    <string name="google_mtv_coord_zoom12">geo:37.422114,-122.086744?z=12</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title">Title</string>
    <string name="harga">Harga</string>
    <string name="rp">Rp.</string>

    <string-array name="titles">
        <item>Ayam 1</item>
        <item>Ayam 2</item>
        <item>Ayam 3</item>
        <item>Ayam 4</item>
        <item>Ayam 5</item>
        <item>Ayam 6</item>
    </string-array>

    <string-array name="harga">
        <item>10000</item>
        <item>15000</item>
        <item>12000</item>
        <item>17000</item>
        <item>13000</item>
        <item>14000</item>
    </string-array>

    <string-array name="des">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
    </string-array>

    <array name="images">
        <item>@drawable/an1</item>
        <item>@drawable/an2</item>
        <item>@drawable/an3</item>
        <item>@drawable/an4</item>
        <item>@drawable/an5</item>
        <item>@drawable/an6</item>
    </array>
</resources>
