<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/card_margin"
    android:background="?android:selectableItemBackground">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/Image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"/>

        <TextView
            android:id="@+id/title"
            style="@style/TextAppearance.AppCompat.Subhead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/Image"
            android:padding="@dimen/card_margin"
            android:text="@string/title" />
        <TextView
            android:id="@+id/rp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/title"
            android:text="@string/rp"
            android:padding="@dimen/card_margin"
            style="@style/TextAppearance.AppCompat.Subhead"/>

        <TextView
            android:id="@+id/subTitle"
            style="@style/TextAppearance.AppCompat.Subhead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/rp"
            android:layout_below="@+id/title"
            android:padding="@dimen/card_margin"
            android:text="@string/harga" />
    </RelativeLayout>

</androidx.cardview.widget.CardView>