<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="18dp"
    android:orientation="vertical"
    tools:context=".Akun">

    <EditText
        android:id="@+id/user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username_register"
        android:imeOptions="actionNext"
        android:inputType="textAutoComplete"
        android:maxLines="1"
        android:singleLine="true" />
    <EditText
        android:id="@+id/pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password_register"
        android:inputType="textPassword"
        android:maxLines="1"
        android:singleLine="true"
        android:imeOptions="actionNext"/>
    <EditText
        android:id="@+id/pass2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:hint="@string/confirm_password_register"
        android:inputType="textPassword"
        android:maxLines="1"
        android:singleLine="true"
        android:imeActionLabel="Sign Up"
        android:imeOptions="actionDone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/simpan"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:text="Simpan"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/batal"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:text="Batal"
            android:layout_weight="1"/>

    </LinearLayout>

</LinearLayout>